--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1>Cambios en el proyecto </h1>
    <main>
    <section>
     <form class="formulario">
